socks-app-deploy/main-manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: nayokians.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-svc
                port:
                  number: 80
    - host: grafana.nayokians.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
    - host: prometheus.nayokians.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
  tls:
  - hosts:
    - nayokians.me
    secretName: capstn2-tls
